Bugfix#2 : fixed header stretching to infinite on mobile screens

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -18,6 +18,9 @@ body{
 header{
 	background: linear-gradient(180deg,#f1f1f1,#9e9e9e);
 }
+img[src="images/csi_header.png"]{
+	width: 50%;
+}
 /*Navbar*/
 div.container-fluid{
 	padding-left: 0px;
@@ -60,15 +63,28 @@ div.text-center h1{
 div.img img{
 	object-fit: fill !important;
 }
-@media (min-width: 200px) and (max-width: 1200px){
+@media (min-width: 601px) and (max-width: 1200px){
 	div.col-4{
 	flex: 0 0 50%;
   	max-width: 50%;
 	}
+	img[src="images/csi_header.png"]{
+	width: 80%;
+}
 }
 @media (min-width: 1200px){
 	div.col-4{
 	flex: 0 0 33.333333%;
   	max-width: 33.333333%;
+	}
+}
+
+@media (min-width: 100px) and (max-width: 600px){
+	div.col-4{
+	flex: 0 0 100%;
+  	max-width: 100%;
+	}
+	img[src="images/csi_header.png"]{
+	width: 80%;
 	}
 }
