--- a/css/home.css
+++ b/css/home.css
@@ -19,8 +19,7 @@ header{
 	background: linear-gradient(180deg,#f1f1f1,#9e9e9e);
 }
 img[src="images/csi_header.png"]{
-	width: 100%;
-	height: auto;
+	width: 50%;
 }
 /*Nitte Image*/
 img[src="images/nmamitbanner.jpg"]{
@@ -124,6 +123,25 @@ div.container h1{
 	border : 2px 2px 2px 2px black;
 }
 
-div.container{
-
+@media (min-width: 100px) and (max-width: 768px){
+	div.col-4{
+	flex: 0 0 50%;
+  	max-width: 50%;
+	}
+	img[src="images/csi_header.png"]{
+	width: 80%;
+}
+@media (min-width: 769px) and (max-width: 1200px){
+	div.col-4{
+	flex: 0 0 50%;
+  	max-width: 50%;
+	}
+	img[src="images/csi_header.png"]{
+	width: 80%;
+}
+@media (min-width: 1200px){
+	div.col-4{
+	flex: 0 0 33.333333%;
+  	max-width: 33.333333%;
+	}
 }
